Update server build process to include all dependencies and enhance error handling
- Modified package.json to install all dependencies during the build process.
- Added a prestart script to verify the presence of express-validator before starting the server.
- Updated render.yaml to ensure express-validator is installed and verified during the build and start commands.

--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "setup-db": "npm run migrate && npm run seed",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install --production && npm run migrate"
+    "build": "npm install && npm run migrate",
+    "prestart": "node -e \"if (!require.resolve('express-validator')) { console.error('express-validator not found!'); process.exit(1); }\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
