--- a/vercel.json
+++ b/vercel.json
@@ -83,7 +83,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://vercel.live https://vercel.live/_next-live/ https://homeswift.co; script-src-elem 'self' 'unsafe-inline' https://homeswift.co https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://homeswift.co; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://homeswift.co; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co https://homeswift.co https://homeswift-ai.vercel.app; frame-src 'self' https://vercel.live;"
+          "value": "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://vercel.live https://homeswift.co; script-src-elem 'self' 'unsafe-inline' https://homeswift.co https://www.googletagmanager.com https://vercel.live; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://homeswift.co https://vercel.live; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://homeswift.co; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co https://homeswift.co https://homeswift-ai.vercel.app https://vercel.live; frame-src 'self' https://vercel.live;"
         },
         {
           "key": "Access-Control-Allow-Origin",
