--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "setup-supabase": "node setup-supabase.js",
     "setup-db": "node setup-database.js",
     "deploy": "vercel --prod",
-    "deploy:chat": "vercel --prod --env CHAT_MODE=true"
+    "deploy:chat": "vercel --prod --env CHAT_MODE=true",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -50,6 +52,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-a11y": "^9.1.10",
+    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/addon-onboarding": "^9.1.10",
+    "@storybook/addon-vitest": "^9.1.10",
+    "@storybook/react-vite": "^9.1.10",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -63,10 +71,16 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^9.1.10",
     "postcss": "^8.4.32",
+    "storybook": "^9.1.10",
     "tailwindcss": "^3.4.0",
     "terser": "^5.44.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.56.0",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
