--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "framer-motion": "^10.16.16",
     "history": "^5.3.0",
     "lucide-react": "^0.544.0",
@@ -64,6 +64,8 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
@@ -72,15 +74,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^9.1.10",
+    "playwright": "^1.56.0",
     "postcss": "^8.4.32",
     "storybook": "^9.1.10",
     "tailwindcss": "^3.4.0",
     "terser": "^5.44.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.56.0",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
